kubernetes/apps/kube-system/cilium/gateway/internal.sops.yaml
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  annotations:
    external-dns.alpha.kubernetes.io/target: internal.bubsybox.dev
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 10.0.99.11
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: internal.bubsybox.dev
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: '*.bubsybox.dev'
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: '*.bubsybox.dev'
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: bubsybox-dev-production-tls
sops:
  age:
    - recipient: age1wvmqsclxt9s2xaqc0rarsyp5d76jg4rh5zawterhkzjm2wvz8uxswff94q
      enc: |
        -----BEGIN AGE ENCRYPTED FILE-----
        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB6SWtjNnF5NXBYOWVTbnlw
[...]
        PSojABU/biffXN2jNyMbi4+Z5C0h4WWmTY425sy9h+4l1QCIcLHUhA==
        -----END AGE ENCRYPTED FILE-----
  lastmodified: "2025-09-01T19:39:54Z"
  mac: ENC[AES256_GCM,data:oACGgGQOvzoyJVWEru2qamGVRO9TiSW8O/BUmEO6mTCozA1S+SqTkh8OLf12E/OiVKyBPeVHfKS2VRnZyGP5cCqtczY9729SxaHM85kfLYufvUU0rYTdZ3TUBUtObDEBweQQEWeWDo96IbiR6qFvZ4qJZW4tVbSKJ6MkrJ698Gs=,iv:Q7Tn+UquSnUN6sETWamrYwUJSCRKRzDPZUXQFpyti8w=,tag:FQ8uOmsBu2qFw9/J0hBNfg==,type:str]
  encrypted_regex: ^(data|stringData)$
  mac_only_encrypted: true
  version: 3.10.2
